# jjbank

./: .gitignore  README.md  cli.py  gui.py  pyproject.toml  requirements.txt  run.bat
.hermes/plans/: 2026-06-17_203200-bank-statement-analyser.md
execution/: __init__.py  categorise.py  income_analysis.py  ingest_statement.py  reports.py
tests/: __init__.py  test_categorise.py  test_execution_import.py  test_income_analysis.py  test_ingest_statement.py  test_reports.py
web/: app.py
